[pwando] Users can add adaptation section - wip edit adaptation section

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.129
+MODULE_VERSION: 0.130
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -12,6 +12,7 @@ MENU_CATEGORY: Resources
 DEPENDS: creativecommons
 DEPENDS: oeruserdata
 
+UPDATE_DESCRIPTION: [pwando] - Users can add adaptation section - wip edit adaptation section
 UPDATE_DESCRIPTION: [pwando] - Renamed adaptations home path from 1b to adaptationlist
 UPDATE_DESCRIPTION: [pwando] - Included adaptations table. Kindly patch
 UPDATE_DESCRIPTION: [pwando] - Formatted adaptations grid view as per specs
