Added additional years to the bizarreness

--- a/readinglist/register.conf
+++ b/readinglist/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Reading List
 MODULE_DESCRIPTION: The readinglist module is a module that contains a list of documents used by students and lecturers.It contains the following functions, add,edit and it also gives you a an option of getting other documentation by link of urls.
 MODULE_AUTHORS: John Abakpa, Luis Domingos, Juliet Mulindwa
 MODULE_RELEASEDATE: 2006 11 01
-MODULE_VERSION: 1.23
+MODULE_VERSION: 1.24
 MODULE_PATH: readinglist
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -90,7 +90,12 @@ USES: yr_04|year|2004
 USES: yr_05|year|2005
 USES: yr_06|year|2006
 USES: yr_07|year|2007
-
+USES: yr_08|year|2008
+USES: yr_09|year|2009
+USES: yr_10|year|2010
+USES: yr_11|year|2011
+USES: yr_12|year|2012
+USES: yr_13|year|2013
 
 
 
