added dependency on wall and added comments

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -11,6 +11,7 @@ MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
 DEPENDS: oeruserdata
+DEPENDS: wall
 
 UPDATE_DESCRIPTION: [pwando] - Users can add adaptation section - wip edit adaptation section
 UPDATE_DESCRIPTION: [pwando] - Renamed adaptations home path from 1b to adaptationlist
