[pwando] - Added wall comments app for view adaptations

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -13,6 +13,7 @@ DEPENDS: creativecommons
 DEPENDS: oeruserdata
 DEPENDS: wall
 
+UPDATE_DESCRIPTION: [pwando] - Added wall comments app for view adaptations
 UPDATE_DESCRIPTION: [pwando] - Add/Edit adaptation section folder or sections redirects back to view adaptation. Previously was redirecting to original products page
 UPDATE_DESCRIPTION: [pwando] - Added extra fields for table sectioncontent
 UPDATE_DESCRIPTION: [pwando] - Users can add adaptation section - wip edit adaptation section
