--- a/oeruserdata/register.conf
+++ b/oeruserdata/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER User Data
 MODULE_DESCRIPTION: Provides a means to capture and maintain the extra user data required by the OER module. It can also be useful to any other project that needs this extra data.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: February 1, 2012, 8:34 am
-MODULE_VERSION: 0.010
+MODULE_VERSION: 0.013
 MODULE_PATH: oeruserdata
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -34,6 +34,10 @@ TEXT: mod_oeruserdata_noperm|User has no permissions to edit another|You do not 
 TEXT: mod_oeruserdata_nopermtitle|No permission|No permission
 TEXT: mod_oeruserdata_provehum|Captcha explanation|You need to prove you are human by filling in the letters and numbers you see in the image in the box immediately below it. 
 TEXT: mod_oeruserdata_caplab|Captcha label|Prove you are human
+TEXT: mod_oeruserdata_nvrts|No rights to view|You do not have rights to access this content. However, you may join the OER system by clicking the register link to the left.
+TEXT: mod_oeruserdata_status_success|Saved successfully|Saved successfully
+TEXT: mod_oeruserdata_status_fail|Save failed|Save failed
+TEXT: mod_oeruserdata_ulst|Manage users|Manage users
 
 USES: phrase_firstname|First name|First name
 USES: word_surname|Surname|Surname
