added rating code

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.133
+MODULE_VERSION: 0.136
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -55,6 +55,7 @@ TABLE: tbl_oer_calendar
 TABLE: tbl_oer_attachments
 TABLE: tbl_oer_sectioncontent
 TABLE: tbl_oer_adaptations
+TABLE: tbl_oer_productrating
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
@@ -242,6 +243,12 @@ TEXT: mod_oer_keyword|Word for keyword input|Keyword
 TEXT: mod_oer_keyword1|Heading for first keyword input|Keyword1
 TEXT: mod_oer_keyword2|Heading for second keyword input|Keyword2
 TEXT: mod_oer_linked_groups|Heading for linked groups input|Select linked group
+TEXT: mod_oer_notsogreat|Phrase Not so great|Not so great
+TEXT: mod_oer_quitegood|Phrase Quite good|Quite good
+TEXT: mod_oer_good|Word Good|Phrase Good
+TEXT: mod_oer_great|Word Great|Great!
+TEXT: mod_oer_excellent|Word Excellent|Excellent!
+TEXT: mod_oer_productrating|Phrase Rating|Rating
 
 COMMENT: ----- SERIALIZE TEXT FOR Javascript MESSAGES ---
 TEXT: mod_oer_status_success|Text for when Ajax save is successful|The record is successfully saved. You may continue editing.
