fixed bug introduced by core changes

--- a/userimport/register.conf
+++ b/userimport/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: User Import
 MODULE_DESCRIPTION: This module implements batch import of new users, using either CSV or XML files, or by webservice to a remote database
 MODULE_AUTHORS: James Scoble
 MODULE_RELEASEDATE: 2005 02 18
-MODULE_VERSION: 1.987
+MODULE_VERSION: 1.988
 MODULE_PATH: userimport
 MODULE_ISADMIN: 1
 MODULE_ISVISIBLE: 1
@@ -14,6 +14,7 @@ MODULE_LANGTERMS: "UserImport"
 TAGS: administration|user
 MODULE_STATUS: stable
 
+UPDATE_DESCRIPTION: Bug fixed - userimport now able to remove users from courses again
 UPDATE_DESCRIPTION: Fixed configuration language items.
 
 PARAM: emaildomain|uwc.ac.za
