added featured product listing

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.136
+MODULE_VERSION: 0.137
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -24,7 +24,7 @@ UPDATE_DESCRIPTION: [dkeats] - Removed the userdata stuff to its own module
 UPDATE_DESCRIPTION: [pwando] - Added extra form for adding new adaptation from product as per requirements. UPDATE OER SKIN. Still WIP
 UPDATE_DESCRIPTION: [dkeats] - Added code for userextra - still a WIP
 UPDATE_DESCRIPTION: [pwando] - Added view full adaptation - WIP
-UPDATE_DESCRIPTION: [pwando] - Added functions for managing product comments
+UPDATE_DESCRIPTION: [pwando] - Added functions for managing product comments  
 UPDATE_DESCRIPTION: [pwando] - Refactored css for view adaptation. Update OER skins before patching
 UPDATE_DESCRIPTION: [pwando] - Reformatted viewadaptation table per specs
 UPDATE_DESCRIPTION: [pwando] - Added sections on view adaptation
@@ -56,6 +56,7 @@ TABLE: tbl_oer_attachments
 TABLE: tbl_oer_sectioncontent
 TABLE: tbl_oer_adaptations
 TABLE: tbl_oer_productrating
+TABLE: tbl_oer_featuredproduct
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
