Added textblock to the admin PAGE.

--- a/textblock/register.conf
+++ b/textblock/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Text block
 MODULE_DESCRIPTION: Text blocks for Chisimba
 MODULE_AUTHORS: Derek Keats, Charl Mert
 MODULE_RELEASEDATE: 2007 04 14
-MODULE_VERSION: 0.880
+MODULE_VERSION: 0.881
 MODULE_PATH: textblock
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 0
@@ -19,6 +19,7 @@ CONTEXT_AWARE: 1
 DEPENDS_CONTEXT: 0
 
 MENU_CATEGORY: admin
+PAGE: admin_site
 MODULE_STATUS: stable
 
 TABLE: tbl_textblock
