Added slate to the admin menu and the site admin page

--- a/slate/register.conf
+++ b/slate/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Clean slate
 MODULE_DESCRIPTION: Provides a clean slate on which you can add block. There is a default slate, and any number of slate pages can be added to create flexible interfaces to a Chisimba installation.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 25, 2012, 3:29 pm
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.002
 MODULE_PATH: slate
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -12,3 +12,6 @@ MODULE_LANGTERMS: slate
 MODULE_CATEGORY: slate
 MODULE_STATUS: stable
 TABLE: tbl_slate_pageblocks
+
+MENU_CATEGORY: admin
+PAGE: admin_site
