--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.137
+MODULE_VERSION: 0.138
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -13,6 +13,7 @@ DEPENDS: creativecommons
 DEPENDS: oeruserdata
 DEPENDS: wall
 
+UPDATE_DESCRIPTION: [pwando] - Added feature - Bookmark a OER Adaptation Product
 UPDATE_DESCRIPTION: [pwando] - Added wall comments app for view adaptations
 UPDATE_DESCRIPTION: [pwando] - Add/Edit adaptation section folder or sections redirects back to view adaptation. Previously was redirecting to original products page
 UPDATE_DESCRIPTION: [pwando] - Added extra fields for table sectioncontent
