[pwando] - Adding rating for product adaptations - WIP

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -13,6 +13,7 @@ DEPENDS: creativecommons
 DEPENDS: oeruserdata
 DEPENDS: wall
 
+UPDATE_DESCRIPTION: [pwando] - Adding rating for product adaptations - WIP
 UPDATE_DESCRIPTION: [pwando] - Added feature - Bookmark a OER Adaptation Product
 UPDATE_DESCRIPTION: [pwando] - Added wall comments app for view adaptations
 UPDATE_DESCRIPTION: [pwando] - Add/Edit adaptation section folder or sections redirects back to view adaptation. Previously was redirecting to original products page
