--- a/oer/register.conf
+++ b/oer/register.conf
@@ -171,6 +171,10 @@ TEXT: mod_oer_updateproductpicture|Phrase Update product cover picture|Update pr
 TEXT: mod_oer_pleasewait|Phrase please wait|Please wait
 TEXT: mod_oer_saving|Word Saving|Saving
 TEXT: mod_oer_loading|Word Loading|Loading
+TEXT: mod_oer_most|Word most|Most
+TEXT: mod_oer_mostadapted|Phrase Adapted|Adapted
+TEXT: mod_oer_mostrated|Phrase rated|Rated
+TEXT: mod_oer_mostcommented|Phrase commented|Commented
 
 COMMENT: TEXT FOR PRODUCT SECTION
 TEXT: mod_oer_forward|Word forward|Forward
