added instutition lang items

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.140
+MODULE_VERSION: 0.141
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -272,6 +272,16 @@ TEXT: mod_oer_institutiontype_heading_new|Heading for institution entry template
 TEXT: mod_oer_institutiontype_heading_edit|Heading for institution entry template|Edit existing institution information type
 TEXT: mod_oer_institutiontype_name|Heading for institution type input|Institution type
 TEXT: mod_oer_typeofinstitution_label|Label for type of institution|Type of institution
+TEXT: mod_oer_institution_type|Label for type of institution|Type of institution
+TEXT: mod_oer_institution_keyword1|Phrase keyword 1|Key word 1
+TEXT: mod_oer_institution_keyword2|Phrase keyword 2|Key word 2
+TEXT: mod_oer_institution_address1|Phrase Institution address 1|Institution address 1
+TEXT: mod_oer_institution_address2|Phrase Institution address 2|Institution address 2
+TEXT: mod_oer_institution_address3|Phrase Institution address 3|Institution address 3
+TEXT: mod_oer_institution_zip|Word Zip|Zip
+TEXT: mod_oer_institution_country|Country|Country
+TEXT: mod_oer_institution_city|City|City
+TEXT: mod_oer_institution_websitelink|Phrase website link|Website link
 
 COMMENT: ------------- TEXT FOR GROUPS ----------------
 TEXT: mod_oer_group_fieldset1|Heading for group fieldset no1 link|Group Details
