--- a/oer/register.conf
+++ b/oer/register.conf
@@ -13,6 +13,7 @@ DEPENDS: creativecommons
 DEPENDS: oeruserdata
 DEPENDS: wall
 
+UPDATE_DESCRIPTION: [pwando] - fixed missing lang items in edit institution form
 UPDATE_DESCRIPTION: [pwando] - Added view featured adaptation
 UPDATE_DESCRIPTION: [pwando] - Added rating for product adaptations
 UPDATE_DESCRIPTION: [pwando] - Adding rating for product adaptations - WIP
