[pwando] - added view institution from adaptation - also removed commented code for adaptation code

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.141
+MODULE_VERSION: 0.142
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -13,6 +13,7 @@ DEPENDS: creativecommons
 DEPENDS: oeruserdata
 DEPENDS: wall
 
+UPDATE_DESCRIPTION: [pwando] - added view institution from adaptation - also removed commented code for adaptation code
 UPDATE_DESCRIPTION: [pwando] - fixed missing lang items in edit institution form
 UPDATE_DESCRIPTION: [pwando] - Added view featured adaptation
 UPDATE_DESCRIPTION: [pwando] - Added rating for product adaptations
