--- a/oer/register.conf
+++ b/oer/register.conf
@@ -13,6 +13,7 @@ DEPENDS: creativecommons
 DEPENDS: oeruserdata
 DEPENDS: wall
 
+UPDATE_DESCRIPTION: [pwando] - Added css for displaying bookmark links
 UPDATE_DESCRIPTION: [pwando] - added view institution from adaptation - also removed commented code for adaptation code
 UPDATE_DESCRIPTION: [pwando] - fixed missing lang items in edit institution form
 UPDATE_DESCRIPTION: [pwando] - Added view featured adaptation
