Added dependency on pdfmaker

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -12,6 +12,7 @@ MENU_CATEGORY: Resources
 DEPENDS: creativecommons
 DEPENDS: oeruserdata
 DEPENDS: wall
+DEPENDS: pdfmaker
 
 UPDATE_DESCRIPTION: [pwando] - Added css for displaying bookmark links
 UPDATE_DESCRIPTION: [pwando] - added view institution from adaptation - also removed commented code for adaptation code
