[pwando] - Added a form for capturing info on users who need to download but are not logged in

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.143
+MODULE_VERSION: 0.144
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -14,6 +14,8 @@ DEPENDS: oeruserdata
 DEPENDS: wall
 DEPENDS: pdfmaker
 
+UPDATE_DESCRIPTION: [pwando] - Added form for capturing info on users who need to download but are not logged in
+UPDATE_DESCRIPTION: [pwando] - Added dependency on pdfmaker
 UPDATE_DESCRIPTION: [pwando] - Added css for displaying bookmark links
 UPDATE_DESCRIPTION: [pwando] - added view institution from adaptation - also removed commented code for adaptation code
 UPDATE_DESCRIPTION: [pwando] - fixed missing lang items in edit institution form
@@ -47,6 +49,7 @@ UPDATE_DESCRIPTION: [pwando] - adding functionality to manage adaptations
 COMMENT: Blocks used in the OER module
 WIDEBLOCK: groupedit
 
+TABLE: tbl_oer_downloaders
 TABLE: tbl_oer_products
 TABLE: tbl_oer_umbrella_themes
 TABLE: tbl_oer_themes
@@ -179,6 +182,10 @@ TEXT: mod_oer_most|Word most|Most
 TEXT: mod_oer_mostadapted|Phrase Adapted|Adapted
 TEXT: mod_oer_mostrated|Phrase rated|Rated
 TEXT: mod_oer_mostcommented|Phrase commented|Commented
+TEXT: mod_oer_downloadproduct|Phrase Download product|Download product
+TEXT: mod_oer_fname|Phrase First name|First name
+TEXT: mod_oer_lname|Phrase Last name|Last name
+TEXT: mod_oer_useterms|Phrase I agree with UNESCO's terms of use|I agree with UNESCO's terms of use
 
 COMMENT: TEXT FOR PRODUCT SECTION
 TEXT: mod_oer_forward|Word forward|Forward
@@ -211,6 +218,9 @@ TEXT: mod_oer_addyourown|Phrase add your own|Add your own
 TEXT: mod_oer_required|Word required|Required
 TEXT: mod_oer_currentpath|Phrase Current path|Current path
 TEXT: mod_oer_attachfile|Phrase Attach file|Attach file
+TEXT: mod_oer_occupation|Word occupation|Occupation
+TEXT: mod_oer_downloadreason|Phrase Reason for download|Reason for download
+TEXT: mod_oer_next|Word Next|Next
 
 COMMENT: TEXT FOR ADAPTATIONS
 TEXT: mod_oer_adaptation_heading_step1|Phrase Adaptation step 1|Adaptation step 1
