[pwando] - Winding up download product forms

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.144
+MODULE_VERSION: 0.145
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -14,6 +14,7 @@ DEPENDS: oeruserdata
 DEPENDS: wall
 DEPENDS: pdfmaker
 
+UPDATE_DESCRIPTION: [pwando] - Winding up download product forms
 UPDATE_DESCRIPTION: [pwando] - Added form for capturing info on users who need to download but are not logged in
 UPDATE_DESCRIPTION: [pwando] - Added dependency on pdfmaker
 UPDATE_DESCRIPTION: [pwando] - Added css for displaying bookmark links
@@ -271,7 +272,14 @@ TEXT: mod_oer_quitegood|Phrase Quite good|Quite good
 TEXT: mod_oer_good|Word Good|Phrase Good
 TEXT: mod_oer_great|Word Great|Great!
 TEXT: mod_oer_excellent|Word Excellent|Excellent!
-TEXT: mod_oer_productrating|Phrase Rating|Rating
+TEXT: mod_oer_productrating|Word Rating|Rating
+TEXT: mod_oer_selectformat|Phrase Select format|Select format
+TEXT: mod_oer_pdf|Word PDF|PDF
+TEXT: mod_oer_mediawiki|Word Mediawiki|Mediawiki
+TEXT: mod_oer_odt|Phrase for ODT|Open Document Format (ODT)
+TEXT: mod_oer_msword|Phrase Microsoft Word Format|Microsoft Word Format
+TEXT: mod_oer_acceptnotifyupdatesoriginal|Phrase Notify me on updates of UNESCO original|Notify me on updates of UNESCO original
+TEXT: mod_oer_acceptnotifyupdatesadaptation|Phrase Notify me on updates of this adaptation|Notify me on updates of this adaptation
 
 COMMENT: ----- SERIALIZE TEXT FOR Javascript MESSAGES ---
 TEXT: mod_oer_status_success|Text for when Ajax save is successful|The record is successfully saved. You may continue editing.
