--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.145
+MODULE_VERSION: 0.147
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -14,6 +14,7 @@ DEPENDS: oeruserdata
 DEPENDS: wall
 DEPENDS: pdfmaker
 
+UPDATE_DESCRIPTION: [pwando] - Added extra fields to product downloader table
 UPDATE_DESCRIPTION: [pwando] - Winding up download product forms
 UPDATE_DESCRIPTION: [pwando] - Added form for capturing info on users who need to download but are not logged in
 UPDATE_DESCRIPTION: [pwando] - Added dependency on pdfmaker
