[pwando] - Users can now create .odt and .pdf files successfully as per specs. TODO .pdf, mediawiki, ODF

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -14,7 +14,8 @@ DEPENDS: oeruserdata
 DEPENDS: wall
 DEPENDS: pdfmaker
 
-UPDATE_DESCRIPTION: [pwando] - Added extra fields to product downloader table
+UPDATE_DESCRIPTION: [pwando] - Users can now create .odt and .pdf files successfully as per specs. TODO .pdf, mediawiki, ODF
+UPDATE_DESCRIPTION: [pwando] - Added extra fields to product downloader table.
 UPDATE_DESCRIPTION: [pwando] - Winding up download product forms
 UPDATE_DESCRIPTION: [pwando] - Added form for capturing info on users who need to download but are not logged in
 UPDATE_DESCRIPTION: [pwando] - Added dependency on pdfmaker
