[pwando] - Users can now create .pdf. This was not possible initially due to bug in pdfmaker.

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -14,6 +14,7 @@ DEPENDS: oeruserdata
 DEPENDS: wall
 DEPENDS: pdfmaker
 
+UPDATE_DESCRIPTION: [pwando] - Users can now also print in .pdf. This had not worked in previous commit due to bug in pdfmaker
 UPDATE_DESCRIPTION: [pwando] - Users can now create .odt and .pdf files successfully as per specs. TODO .pdf, mediawiki, ODF
 UPDATE_DESCRIPTION: [pwando] - Added extra fields to product downloader table.
 UPDATE_DESCRIPTION: [pwando] - Winding up download product forms
