--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.147
+MODULE_VERSION: 0.148
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -14,6 +14,7 @@ DEPENDS: oeruserdata
 DEPENDS: wall
 DEPENDS: pdfmaker
 
+UPDATE_DESCRIPTION: [pwando] - Added two functions (ln 90 & 100) for getting count of product adaptations
 UPDATE_DESCRIPTION: [pwando] - Users can now also print in .pdf. This had not worked in previous commit due to bug in pdfmaker
 UPDATE_DESCRIPTION: [pwando] - Users can now create .odt and .pdf files successfully as per specs. TODO .pdf, mediawiki, ODF
 UPDATE_DESCRIPTION: [pwando] - Added extra fields to product downloader table.
