added institution management

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.148
+MODULE_VERSION: 0.153
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -73,6 +73,7 @@ TABLE: tbl_oer_sectioncontent
 TABLE: tbl_oer_adaptations
 TABLE: tbl_oer_productrating
 TABLE: tbl_oer_featuredproduct
+TABLE: tbl_oer_downloaders
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
@@ -191,6 +192,12 @@ TEXT: mod_oer_downloadproduct|Phrase Download product|Download product
 TEXT: mod_oer_fname|Phrase First name|First name
 TEXT: mod_oer_lname|Phrase Last name|Last name
 TEXT: mod_oer_useterms|Phrase I agree with UNESCO's terms of use|I agree with UNESCO's terms of use
+TEXT: mod_oer_cpanel|Word cpanel|CPanel
+TEXT: mod_oer_users|Word users|Users
+TEXT: mod_oer_modulemanager|Phrase Module Manager|Module Manager
+TEXT: mod_oer_institutions|Word institutions|Institutions
+TEXT: mod_oer_adaptedin|Phrase adapted in|Adapted in
+
 
 COMMENT: TEXT FOR PRODUCT SECTION
 TEXT: mod_oer_forward|Word forward|Forward
@@ -226,6 +233,7 @@ TEXT: mod_oer_attachfile|Phrase Attach file|Attach file
 TEXT: mod_oer_occupation|Word occupation|Occupation
 TEXT: mod_oer_downloadreason|Phrase Reason for download|Reason for download
 TEXT: mod_oer_next|Word Next|Next
+TEXT: mod_oer_logo|Word Logo|Logo
 
 COMMENT: TEXT FOR ADAPTATIONS
 TEXT: mod_oer_adaptation_heading_step1|Phrase Adaptation step 1|Adaptation step 1
