added filter form

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.153
+MODULE_VERSION: 0.156
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -81,8 +81,21 @@ TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
 USES: word_save|Save|Save
 USES: word_description|Description|Description
 
+COMMENT: Filters
+TEXT: mod_oer_typeofproduct|Phrase Type of Product|Type of product
+TEXT: mod_oer_typeofadaptation|Phrase Type of Adaptation|Type of adaptation
+TEXT: mod_oer_model|Word model|Model
+TEXT: mod_oer_guide|Word guide|Guide
+TEXT: mod_oer_handbook|Word handbook|Handbook
+TEXT: mod_oer_manual|Word manual|Manual
+TEXT: mod_oer_bestpractice|Phrase best practice|Best practice
+TEXT: mod_oer_itemsperpage|Phrase Items per page|Items per page
+TEXT: mod_oer_reset|Word reset|Reset
+TEXT: mod_oer_numberofproductsmatches|Phrase Number of products matches filter criteria|Number of products matches filter criteria
+TEXT: mod_oer_filterproducts|Phrase filter products|Filter products
 
-COMMENT: REUSABLE TEXT - PLEASE REUSE IT!!!!
+
+
 TEXT: mod_oer_featured|The word featured|Featured
 TEXT: mod_oer_changeavatar|Label for changing avatar|Change avatar
 
