--- a/demodata/register.conf
+++ b/demodata/register.conf
@@ -3,24 +3,24 @@ MODULE_NAME: Demo data
 MODULE_DESCRIPTION: Creates demo data for an installation, allowing for test data such as users, etc. as well as enabling the carrying out of a demonstration using fake data.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2006 10 17
-MODULE_VERSION: 0.05
+MODULE_VERSION: 0.051
 MODULE_PATH: demodata
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: demodata
 MODULE_CATEGORY: demodata
+MODULE_STATUS: stable
 
 TABLE: tbl_demodata_info
 
+UPDATE_DESCRIPTION: Removed block registrations
 UPDATE_DESCRIPTION: Changed user creation to use the API
 UPDATE_DESCRIPTION: Fixed incorrect userids in FOAF data
 UPDATE_DESCRIPTION: Added some FOAF Friends data
 
 MENU_CATEGORY: Developer
-;WIDEBLOCK: hello
-;BLOCK: left
-;BLOCK: right
+
 
 DEPENDS: security
 DEPENDS: wall
