--- a/modulelist/register.conf
+++ b/modulelist/register.conf
@@ -3,18 +3,19 @@ MODULE_NAME: Module List
 MODULE_DESCRIPTION: List of all modules on this particular installation
 MODULE_AUTHORS: Paul Scott
 MODULE_RELEASEDATE: 2010 01 15
-MODULE_VERSION: 0.002
+MODULE_VERSION: 0.004
 MODULE_PATH: modulelist
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: modulelist
 
+UPDATE_DESCRIPTION: Colour coded output by module status, need styles in metallic and canvas skin for it to work,
 UPDATE_DESCRIPTION: Start
 MODULE_STATUS: beta
 TAGS: user|modules|list
 
-MENU_CATEGORY: user
+MENU_CATEGORY: Developer
 
 TEXT: mod_modulelist_header|list of modules|List of modules on this server
 TEXT: mod_modulelist_countavailable|count available|modules available on this server
