[#pwando] - Adding a bubble tooltip for downloads

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -247,6 +247,15 @@ TEXT: mod_oer_occupation|Word occupation|Occupation
 TEXT: mod_oer_downloadreason|Phrase Reason for download|Reason for download
 TEXT: mod_oer_next|Word Next|Next
 TEXT: mod_oer_logo|Word Logo|Logo
+TEXT: mod_oer_downloadlnone|Phrase for download|OER platform can facilitate creation and storage of your own adaptation of this UNESCO product
+TEXT: mod_oer_downloadlntwo|Phrase for download|If you want to use OER platform to create and host your adaptation you need to become member of one of the UNESCO networks
+TEXT: mod_oer_clickhere|Phrase Click here|Click here
+TEXT: mod_oer_downloadlnthree|Phrase for download continued|to join UNESCO network
+TEXT: mod_oer_readmore|Phrase Read more|Read more
+TEXT: mod_oer_downloadlnfour|Phrase on this topic|on this topic
+TEXT: mod_oer_downloadlnfive|Phrase If you are already a member of one of the UNESCO Networks
+TEXT: mod_oer_clicktologin|Phrase click here to login|click here to login
+TEXT: mod_oer_downloadlnsix|Phrase for download continued|Once logged-in you can proceed with creation of a new adaptation
 
 COMMENT: TEXT FOR ADAPTATIONS
 TEXT: mod_oer_adaptation_heading_step1|Phrase Adaptation step 1|Adaptation step 1
