added module status and note that this module has hard-coded jQuery and needs refactoring to remove it

--- a/libraryforms/register.conf
+++ b/libraryforms/register.conf
@@ -1,25 +1,29 @@
 MODULE_ID: libraryforms
-MODULE_NAME: libraryforms
+MODULE_NAME: Library forms
 MODULE_DESCRIPTION: This module provides a default library forms for the users apply or borrow books online
 MODULE_AUTHORS: Brenda Mayinga
 MODULE_RELEASEDATE: 2010 01 01
-MODULE_VERSION: 0.44
+MODULE_VERSION: 0.450
 MODULE_PATH: libraryforms
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: libraryforms
+MODULE_STATUS: stable
 
 MENU_CATEGORY: user
 CONTEXT_AWARE: 0
 DEPENDS_CONTEXT: 0
+
+NOTES: [DWK] @CleanUpRequired@ This module hard codes an old version of jQuery. It is likely to be problematic in the future.
 
 TABLE: tbl_distanceform
 TABLE: tbl_feedbackform 
 TABLE: tbl_booksthesis
 TABLE: tbl_illperiodical
 
+UPDATE_DESCRIPTION: added module status and note that this module has hard-coded jQuery and needs refactoring to remove it
 UPDATE_DESCRIPTION: updated a langauge item
 UPDATE_DESCRIPTION: added new language item
 UPDATE_DESCRIPTION: added new language item
