--- a/aart/register.conf
+++ b/aart/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: ASCII Art generator
 MODULE_DESCRIPTION: Created ASCII art from images
 MODULE_AUTHORS: Paul Scott
 MODULE_RELEASEDATE: 2011 06 25
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.002
 MODULE_PATH: aart
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -11,9 +11,11 @@ MODULE_ISVISIBLE: 0
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: aart
 CONTEXT_AWARE: 0
+MODULE_STATUS: marked_for_removal
 
 DEPENDS_CONTEXT: 0
 
+UPDATE_DESCRIPTION:  Module not working, status marked for removal
 UPDATE_DESCRIPTION:  Initial version
 
 TEXT: mod_aart_enterurl|enter url|Enter URL
