Changed status to beta

--- a/activitystreamer/register.conf
+++ b/activitystreamer/register.conf
@@ -3,21 +3,23 @@ MODULE_NAME: Activity Streamer
 MODULE_DESCRIPTION: Provides a log of activities performed by users on the site. Supports PubSubHubbub and activitystrea.ms
 MODULE_AUTHORS: Wesley Nitsckie, Paul Mungai
 MODULE_RELEASEDATE: 2008 08 25
-MODULE_VERSION: 0.039
+MODULE_VERSION: 0.040
 MODULE_PATH: activitystreamer
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
 MODULE_ISVISIBLE: 0
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: activitystreamer
-CONTEXT_AWARE: 1
+MODULE_STATUS: beta
 
+CONTEXT_AWARE: 1
 DEPENDS_CONTEXT: 0
 
 DEPENDS: feed
 DEPENDS: pubsubhubbub
 
-UPDATE_DESCRIPTION:  Now using ext instead of htmlelements for the extjs resources
+UPDATE_DESCRIPTION: Changed module status to beta
+UPDATE_DESCRIPTION: Now using ext instead of htmlelements for the extjs resources
 
 CONFIG: twitteruser|0|mod_activitystreamer_conf_twitteruser
 CONFIG: twitterpassword|0|mod_activitystreamer_conf_twitterpassword
@@ -25,7 +27,6 @@ CONFIG: twitterpassword|0|mod_activitystreamer_conf_twitterpassword
 SIDEMENU: elearnpostlogin-2
 
 TABLE: tbl_activity
-
 
 BLOCK: latestsiteactivity
 BLOCK: latestcontextactivity
