MODULE_STATUS changed to alpha

--- a/artdir/register.conf
+++ b/artdir/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Artist Directory system
 MODULE_DESCRIPTION: FOAF based artist directory
 MODULE_AUTHORS: Paul Scott
 MODULE_RELEASEDATE: 2011 06 25
-MODULE_VERSION: 0.010
+MODULE_VERSION: 0.011
 MODULE_PATH: artdir
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -11,6 +11,7 @@ MODULE_ISVISIBLE: 0
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: artdir
 CONTEXT_AWARE: 0
+MODULE_STATUS: alpha
 
 DEPENDS_CONTEXT: 0
 
@@ -24,6 +25,7 @@ TABLE: tbl_artdir_images
 CONFIG: limited_users|0|mod_artdir_limitusers
 CONFIG: mod_artdir_terms|0|mod_artdir_terms
 
+UPDATE_DESCRIPTION: Changed status to alpha
 UPDATE_DESCRIPTION: Initial version
 
 TEXT: mod_artdir_notapproved|Not Approved|Posting an artist on this site requires that one be registered in the Artists group. Contact the SiteAdmin for this.
