status to marked for removal. Fixed wording of description.

--- a/bestwishes/register.conf
+++ b/bestwishes/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: bestwishes
 MODULE_NAME: Best Wishes
-MODULE_DESCRIPTION: Wishes module is a module which will enable users to send variouse wishes to their fellows eg Happybirthday ,graduation,wedding, love messages etc. Users can enter their birthdates in the system and the system will be displaying the names of the users celebrating their birthdays today. There are a lot of templates cards available in the system, so a user can just pick one and send to his/her friend.
+MODULE_DESCRIPTION: Best Wishes enables users to send various greetings to other users, for example Happy Birthday, graduation, wedding and others. Users may enter their birth date in the system and the system will display the names of users with birthdays on a given day. Templates cards can be used to send greetings.
 MODULE_AUTHORS: Emmanuel Natalis
 MODULE_RELEASEDATE: 2008 10 20
-MODULE_VERSION: 0.014
+MODULE_VERSION: 0.015
 MODULE_PATH: bestwishes
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -13,6 +13,10 @@ MODULE_LANGTERMS: bestwishes
 MENU_CATEGORY: user
 CONTEXT_AWARE: 0
 DEPENDS_CONTEXT: 0
+
+MODULE_STATUS: marked_for_removal
+UPDATE_DESCRIPTION: status to marked for removal. Fixed wording of description.
+
 TEXT: mod_bestwishes_welcome|This displays the module's welcome message|Welcome  [-FULLNAME-]! This is the Best Wishes Module
 TEXT: mod_bestwishes_happybirthday|Menu item named happybirthday|Happybirthday
 TEXT: mod_bestwishes_postingmsgs|Menu item named Posting messages|Posting your Events
