status changed to marked for removal

--- a/cfe/register.conf
+++ b/cfe/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: cfe
 MODULE_DESCRIPTION: Contains utils for cfe skin
 MODULE_AUTHORS: JSCE
 MODULE_RELEASEDATE: 2010 05 24
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.002
 MODULE_PATH: cfe
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -12,4 +12,4 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: cfe
 CONTEXT_AWARE: 0
 DEPENDS_CONTEXT: 0
-
+MODULE_STATUS: marked_for_removal
