UPDATE_DESCRIPTION: changed status to invisible

--- a/computerscience/register.conf
+++ b/computerscience/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Computer Science For Fun
 MODULE_DESCRIPTION: Through a grant by Google, we are able to undertake a project that promotes interest in computer science among high school learners in the Western Cape 
 MODULE_AUTHORS: Musa Mhlengi, Paul Scott
 MODULE_RELEASEDATE: 2009 01 11
-MODULE_VERSION: 0.206
+MODULE_VERSION: 0.207
 MODULE_PATH: computerscience
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -13,6 +13,10 @@ MODULE_LANGTERMS: computerscience
 MENU_CATEGORY: user
 CONTEXT_AWARE: 0
 DEPENDS_CONTEXT: 0
+MODULE_STATUS: invisible
+
+UPDATE_DESCRIPTION: changed status to invisible
+
 TEXT: mod_computerscience_commenttitle|Label for comment title|Title of comment
 TEXT: mod_computerscience_commenttxt|Label for comment box|Enter your comment
 TEXT: mod_computerscience_savecomment|Label for save button|Save as AIML document
