added application status

--- a/gift/register.conf
+++ b/gift/register.conf
@@ -5,7 +5,7 @@ MODULE_AUTHORS:Kevin Martin
 MODULE_RELEASEDATE: 2009 08 31
 MODULE_VERSION: 0.057
 MODULE_PATH: gift
-
+MODULE_STATUS: stable
 MENU_CATEGORY: user
 
 CONFIG: ADMIN_EMAIL|noreply@localhost.com|mod_gift_adminemail
