Incremented version number.

--- a/loadmonitor/register.conf
+++ b/loadmonitor/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Load Monitor
 MODULE_DESCRIPTION: A site load monitor.
 MODULE_AUTHORS: Jeremy O'Connor
 MODULE_RELEASEDATE: 2011 10 13
-MODULE_VERSION: 0.005
+MODULE_VERSION: 0.006
 MODULE_PATH: loadmonitor
 MODULE_ISADMIN: 1
 MODULE_ISVISIBLE: 1
@@ -16,6 +16,7 @@ COMMENT: PAGE: loadmonitor
 DEPENDS_CONTEXT: 0
 CONTEXT_AWARE: 0
 
+UPDATE_DESCRIPTION: Changed statistics
 UPDATE_DESCRIPTION: Changed text
 UPDATE_DESCRIPTION: Made enhancements to statistics
 COMMENT: UPDATE_DESCRIPTION: TEST
