[#pwando] - Completed download adaptation feature

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.156
+MODULE_VERSION: 0.157
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -14,6 +14,7 @@ DEPENDS: oeruserdata
 DEPENDS: wall
 DEPENDS: pdfmaker
 
+UPDATE_DESCRIPTION: [pwando] - Added download options for non logged in users, check adaptations download
 UPDATE_DESCRIPTION: [pwando] - Added two functions (ln 90 & 100) for getting count of product adaptations
 UPDATE_DESCRIPTION: [pwando] - Users can now also print in .pdf. This had not worked in previous commit due to bug in pdfmaker
 UPDATE_DESCRIPTION: [pwando] - Users can now create .odt and .pdf files successfully as per specs. TODO .pdf, mediawiki, ODF
@@ -253,9 +254,10 @@ TEXT: mod_oer_clickhere|Phrase Click here|Click here
 TEXT: mod_oer_downloadlnthree|Phrase for download continued|to join UNESCO network
 TEXT: mod_oer_readmore|Phrase Read more|Read more
 TEXT: mod_oer_downloadlnfour|Phrase on this topic|on this topic
-TEXT: mod_oer_downloadlnfive|Phrase If you are already a member of one of the UNESCO Networks
+TEXT: mod_oer_downloadlnfive|Phrase If you are already a member of one of the UNESCO Networks|If you are already a member of one of the UNESCO Networks
 TEXT: mod_oer_clicktologin|Phrase click here to login|click here to login
 TEXT: mod_oer_downloadlnsix|Phrase for download continued|Once logged-in you can proceed with creation of a new adaptation
+TEXT: mod_oer_downloadlnseven|Phrase I want to proceed to download|I want to proceed to download
 
 COMMENT: TEXT FOR ADAPTATIONS
 TEXT: mod_oer_adaptation_heading_step1|Phrase Adaptation step 1|Adaptation step 1
