[#pwando] - renamed buttons

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.157
+MODULE_VERSION: 0.158
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -246,6 +246,7 @@ TEXT: mod_oer_currentpath|Phrase Current path|Current path
 TEXT: mod_oer_attachfile|Phrase Attach file|Attach file
 TEXT: mod_oer_occupation|Word occupation|Occupation
 TEXT: mod_oer_downloadreason|Phrase Reason for download|Reason for download
+TEXT: mod_oer_download|Word Download|Download
 TEXT: mod_oer_next|Word Next|Next
 TEXT: mod_oer_logo|Word Logo|Logo
 TEXT: mod_oer_downloadlnone|Phrase for download|OER platform can facilitate creation and storage of your own adaptation of this UNESCO product
