[#pwando] - Modified featured adaptation

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.158
+MODULE_VERSION: 0.159
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -269,6 +269,7 @@ TEXT: mod_oer_adaptation_heading_step5|Phrase Adaptation step 5|Adaptation step 
 TEXT: mod_oer_adaptations|Phrase UNESCO OER ADAPTATIONs|UNESCO OER ADAPTATIONS
 TEXT: mod_oer_newadaptation|Phrase New Adaptation|New Adaptation
 TEXT: mod_oer_adaptationscount|Word Adaptations|Adaptations
+TEXT: mod_oer_adaptation|Word Adaptation|Adaptation
 TEXT: mod_oer_adaptedby|Phrase Adapted by|Adapted by
 TEXT: mod_oer_adaptedin|Phrase Adapted in|Adapted in
 TEXT: mod_oer_bookmark|Word Bookmark|Bookmark
@@ -367,6 +368,7 @@ TEXT: mod_oer_group_postalcode|Heading for group postal code|Postal Code
 TEXT: mod_oer_group_institution|Heading for group institution link|Institution
 TEXT: mod_oer_group_locincorrect|Label for location|Please enter your location if the provided location is incorrect
 TEXT: mod_oer_existingadaptations|Phrase See all existing adaptations of this product|See all existing adaptations of this product
+TEXT: mod_oer_seeall|Phrase See all|See all
 
 COMMENT: ------------ Rules for the group edit form -----------------
 TEXT: mod_oer_grouprule_namerequired|Text indicating that the group name is required|Group name is required; please enter it in the appropriate field.
