updated  products listing

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.159
+MODULE_VERSION: 0.160
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -119,6 +119,7 @@ TEXT: mod_oer_umbrellatheme|Word Umbrella theme|Umbrella theme
 TEXT: mod_oer_keywords|Word keywords|Keywords
 TEXT: mod_oer_keywordsInstruction|Phrase separate keywords with a comma|Separate keywords with a comma
 TEXT: mod_oer_language|Word language|Language
+TEXT: mod_oer_languages|Word languages|Languages
 TEXT: mod_oer_select|Word select|Select
 TEXT: mod_oer_english|Word English|English
 TEXT: mod_oer_translationof|Phrase translation of|Translation of
