linked up groupadmin

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.160
+MODULE_VERSION: 0.161
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -99,6 +99,7 @@ TEXT: mod_oer_filterproducts|Phrase filter products|Filter products
 
 TEXT: mod_oer_featured|The word featured|Featured
 TEXT: mod_oer_changeavatar|Label for changing avatar|Change avatar
+TEXT: mod_oer_siteadministration|Phrase Site Administration|Site Administration
 
 COMMENT: TEXT FOR PRODUCTS
 TEXT: mod_oer_login|Word login|Login
