A little more work towards the interface improvements to textblocks

--- a/textblock/register.conf
+++ b/textblock/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Text block
 MODULE_DESCRIPTION: Text blocks for Chisimba
 MODULE_AUTHORS: Derek Keats, Charl Mert
 MODULE_RELEASEDATE: 2007 04 14
-MODULE_VERSION: 0.881
+MODULE_VERSION: 0.883
 MODULE_PATH: textblock
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 0
@@ -172,12 +172,13 @@ TEXT: mod_textblock_block_howto|Content explaining how to navigate blocks|Click 
 TEXT: mod_textblock_block_howtoed_title|How to edit|How to edit
 TEXT: mod_textblock_block_howtoed|Instructions for how to edit|Edit or add a bloc by filling in the required information in the form at the right. Narrow side blocks have the datablock codes of text1 to text60, and wide (middle) blocks have codes of widetext1 to widetext60. Provide a title even if the title will not be displayed. Note that you cannot have duplicate datablock codes. Currently there is no validation of this, this will be added later.
 COMMENT: Data field labels
-TEXT: mod_textblock_field_blockid|The label for the blockid|The datablock to display into (must be in the range text1 to text60, or widetext1 to widetext 60)
+TEXT: mod_textblock_field_blockid|The label for the blockid|The datablock to display into
 TEXT: mod_textblock_field_title|Label for the title input|Title of block
 TEXT: mod_textblock_field_blocktext|Label for the block contents|Block contents
 TEXT: mod_textblock_css_class|Label for the css Class input|CSS Class (Optional)
 TEXT: mod_textblock_css_id|Label for the css Id input|CSS Id (Optional)
 TEXT: mod_textblock_show_title|Label for the show title checkbox|Show the title for this block?
+TEXT: mod_textblock_titlereq|You must enter a title|You must enter a title
 
 COMMENT: help elements
 TEXT: help_textblock_about|About Text Block|The management of text blocks displayed on the any pages supporting text blocks.
